syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract.classserver;

import "ClassesDefinitions.proto";

// ClassServer -> ClassServer Service

message Command {
  repeated int32 timestamp = 1;
  string Command = 2;
}

message PropagateStateRequest {
  //ClassState classState = 1;
  repeated Command Command = 1;
}

message PropagateStateResponse {
  ResponseCode code = 1;
}

service ClassServerService {
  rpc propagateState(PropagateStateRequest) returns (PropagateStateResponse);
}
